@startuml
'https://plantuml.com/class-diagram

left to right direction
skinparam packageStyle rectangle
skinparam linetype ortho


package Entities {
CartItem "1"-->"1" Article :has
User "1" <-- "0..1" Cart : owns
Category "1" <-- "0..*" Article : belongs to
Cart "1" *-- "0..*" CartItem : contains
  class Article {
    - Long id
    - String description
    - Double price
    - Category category
  }

  class Cart {
    - Long id
    - User user
  }



  class CartItem {
  - Long id
  - Article article
  - int quantity
  - Cart cart
  }


  class Category {
    - Long id
    - String name
    - Collection<Article> articles
  }




  class User {
    - long id
    - String username
    - String password
    - String role
  }
}

package Repositories {
  class ArticleRepository {

  }

  class CategoryRepository {

  }

  class CartItemRepository {
  }

  class CartRepository {
  }

  class UserRepository {
  }
}

package Services {
  class CartService {
  }
}

package web {
  class ArticleController {
  }
}
@enduml